# teatime-bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.sh  main.c
bot/: main.cpp
helper/: CMakeLists.txt
helper/include/commands/: exec_command.h
helper/include/cryptography/: gen_password.h
helper/include/cryptography/decryption/: xor_decryption.h
helper/include/cryptography/encryption/: xor_encryption.h
helper/src/: exec_command.cpp  gen_password.cpp  xor_cryptography.cpp
include/: http_request.h  parsing_json.h  weather.h
